bk_ida/gccida/g0/free_gcse_mem
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_gcse_mem/src/gcse.c:1501:7: error: use of undeclared identifier 'uid_cuid_1'; did you mean 'uid_cuid'?
free( uid_cuid_1); 
      ^~~~~~~~~~
      uid_cuid
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_gcse_mem/src/gcse.c:383:13: note: 'uid_cuid' declared here
static int *uid_cuid;
            ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/free_gcse_mem/src/obj/gcse.o] Error 1
